--- a/Q3_data_exploration.ipynb
+++ b/Q3_data_exploration.ipynb
@@ -1751,8 +1751,8 @@
    "source": [
     "#Display the sellers above the IQR per living demographic\n",
     "#Reindex the data\n",
-    "# boxplot_no_out_means.reset_index(drop=False, inplace=True)\n",
-    "# boxplot_no_out_means\n",
+    "boxplot_no_out_means.reset_index(drop=False, inplace=True)\n",
+    "boxplot_no_out_means\n",
     "\n",
     "#Single\n",
     "single_top = boxplot_no_out_means.sort_values(\"Single\", ascending=False).head(1)\n",
